examples/virtualservice-basic.yaml
apiVersion: gpu-provider.glami-ml.com/v1alpha1
kind: VirtualService
metadata:
  name: my-virtual-service
  namespace: default
spec:
  gateway:
    selector:
      app.kubernetes.io/name: gpu-provider-gateway
  service:
    selector:
      app: my-virtual-workload
      virtual: "true"
    ports:
      - name: http
        port: 80
        targetPort: 8080
        protocol: TCP
      - name: metrics
        port: 9090
        targetPort: 9090
        protocol: TCP
